Header button tablet fix

--- a/src/login/styles/_Header.scss
+++ b/src/login/styles/_Header.scss
@@ -48,6 +48,7 @@
     button.btn {
       margin-right: 1rem;
       z-index: 3;
+      white-space: nowrap;
     }
 
     // Mobile header logged in
